sdm660-common: Move config_waitForMpctlOnBoot to lineage-sdk overlays
 * This is a lineage-sdk config option and belongs in lineage-sdk
   overlays.

Change-Id: Ib560d3856f0e63837cfe32f28dcd999614ebbb05
Signed-off-by: Joshua Blanchard <joshua.lee.bbg@gmail.com>

--- a/overlay/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay/lineage-sdk/lineage/res/res/values/config.xml
@@ -46,4 +46,8 @@
     <!-- Should we filter any display modes which are unampped? -->
     <bool name="config_filterDisplayModes">true</bool>
 
+    <!-- Whether device needs to wait for Qualcomm MPCTL service to start
+         before setting power profiles on boot. -->
+    <bool name="config_waitForMpctlOnBoot">true</bool>
+
 </resources>
